--- a/templates/register.html
+++ b/templates/register.html
@@ -54,10 +54,6 @@
               </div>
             </div>
         </div>
-              <!-- <div class="form-outline mb-4">
-                <label class="form-label" for="form2Example1">Address</label>
-                <input type="text" id="form2Example1" class="form-control" name="email" placeholder="Address"/>
-              </div> -->
              
               <div class="form-outline mb-4">
                 <label class="form-label" for="form2Example2">Password</label>
@@ -67,7 +63,7 @@
               <!-- Password input -->
               <div class="form-outline mb-4">
                 <label class="form-label" for="form2Example2">Confirm Password</label>
-                <input type="password" id="form2Example2" class="form-control" name="password" placeholder="Confirm Password" />
+                <input type="password" id="form2Example2" class="form-control" name="cpassword" placeholder="Confirm Password" />
               </div>
   
   
